--- a/TestHTML.html
+++ b/TestHTML.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<style>
+    .p1 {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
-    <title>GIT</title>
+    <title>HTTP</title>
 </head>
-<body>
-<h1>Hello World</h1>
-Hier kann Text geschrieben werden.
-<br>
-Hier auch.
+<body class="p1">
+<h1> Standbeine des WWW</h1>
+<p><a href="https://www.w3.com/">W3.com</a></p>
+<ul>
+    <li>Einheitliches Schema für das Auffinden von Ressourcen (URL/Hyperlink)</li>
+    <li>Protokolle, um auf bennante Ressourcen zu zugreifen (z.B. HTTP)</li>
+    <li>Hypertext, um einfach zwischen Ressourcen zu navigieren (z.B. HTML)</li>
+</ul>
+<p>WYSIWYG
+    <br>
+"What you see is what you get."
+    <br>
+Editoren arbeiten grafisch und textuell gleichzeitig.
+</p>
+<p>XAMPP</p>
 </body>
 </html>
