Schichten/Stack als Tabel

--- a/StandbeinDesWW.html
+++ b/StandbeinDesWW.html
@@ -5,6 +5,9 @@
     .p1 {
         font-family: Arial, Helvetica, sans-serif;
     }
+    table, th, td {
+        border: 1px solid;
+    }
 </style>
 <head>
     <meta charset="UTF-8">
@@ -25,5 +28,21 @@
 Editoren arbeiten grafisch und textuell gleichzeitig.
 </p>
 <p>XAMPP</p>
+<p>
+<table>
+    <tr>
+        <th>Schichten</th>
+    </tr>
+    <tr>
+        <td>Präsentation</td>
+    </tr>
+    <tr>
+        <td>Anwendungslogik</td>
+    </tr>
+    <tr>
+        <td>Datenhaltung</td>
+    </tr>
+</table>
+</p>
 </body>
 </html>
