--- a/StandbeinDesWW.html
+++ b/StandbeinDesWW.html
@@ -27,12 +27,9 @@
     <br>
 Editoren arbeiten grafisch und textuell gleichzeitig.
 </p>
-<p>XAMPP</p>
-<p>
+<h3>XAMPP</h3>
+<h3>Schichten</h3>
 <table>
-    <tr>
-        <th>Schichten</th>
-    </tr>
     <tr>
         <td>Präsentation</td>
     </tr>
@@ -43,6 +40,19 @@ Editoren arbeiten grafisch und textuell gleichzeitig.
         <td>Datenhaltung</td>
     </tr>
 </table>
-</p>
+<h3>Lamp</h3>
+<ul>
+    <li>Linux</li>
+    <li>Apache</li>
+    <li>MySQL/MariaDB</li>
+    <li>PHP</li>
+</ul>
+<h3>MEAN</h3>
+<ul>
+    <li>Mongo DB</li>
+    <li>Ngin X</li>
+    <li>Angular JS</li>
+    <li>Mode JS</li>
+</ul>
 </body>
 </html>
