--- a/StandbeinDesWW.html
+++ b/StandbeinDesWW.html
@@ -6,7 +6,7 @@
         font-family: Arial, Helvetica, sans-serif;
     }
     table, th, td {
-        border: 1px solid;
+        border: 2px solid;
     }
 </style>
 <head>
@@ -21,25 +21,25 @@
     <li>Protokolle, um auf bennante Ressourcen zu zugreifen (z.B. HTTP)</li>
     <li>Hypertext, um einfach zwischen Ressourcen zu navigieren (z.B. HTML)</li>
 </ul>
-<p>WYSIWYG
-    <br>
-"What you see is what you get."
-    <br>
+<h3>WYSIWYG</h3>
+"What you see is what you get."<br>
 Editoren arbeiten grafisch und textuell gleichzeitig.
-</p>
-<h3>XAMPP</h3>
 <h3>Schichten</h3>
 <table>
     <tr>
-        <td>Präsentation</td>
+        <td>Präsentation (Browser mit HTML/CSS/JS)</td>
     </tr>
     <tr>
-        <td>Anwendungslogik</td>
+        <td> &uarr;	&#8595; HTTP</td>
+    </tr>
+    <tr>
+        <td>Anwendungslogik (WebSever+(Script))</td>
     </tr>
     <tr>
         <td>Datenhaltung</td>
     </tr>
 </table>
+<h3>XAMPP</h3>
 <h3>Lamp</h3>
 <ul>
     <li>Linux</li>
