--- a/StandbeinDesWW.html
+++ b/StandbeinDesWW.html
@@ -54,5 +54,34 @@ Editoren arbeiten grafisch und textuell gleichzeitig.
     <li>Angular JS</li>
     <li>Mode JS</li>
 </ul>
+<h3>URL</h3>
+<ul>
+    <li>Locator</li>
+</ul>
+<h3>URN</h3>
+        <ul>
+            <li>Naming</li>
+        </ul>
+<h3>URI</h3>
+    <ul>
+        <li>Identifyer</li>
+    </ul>
+<table>
+    <tr>
+        <td>Schema:</td>
+        <td>format</td>
+        <td>[:port]</td>
+    </tr>
+    <tr>
+        <td>http:</td>
+        <td>//servername</td>
+        <td>/pfad</td>
+    </tr>
+    <tr>
+        <td>smb:</td>
+        <td>//servername</td>
+        <td></td>
+    </tr>
+</table>
 </body>
 </html>
