--- a/StandbeinDesWW.html
+++ b/StandbeinDesWW.html
@@ -15,7 +15,7 @@
 </head>
 <body class="p1">
 <h1> Standbeine des WWW</h1>
-<p><a href="https://www.w3.com/">W3.com</a></p>
+<p><a href="https://www.w3.org">W3.com</a></p>
 <ul>
     <li>Einheitliches Schema für das Auffinden von Ressourcen (URL/Hyperlink)</li>
     <li>Protokolle, um auf bennante Ressourcen zu zugreifen (z.B. HTTP)</li>
@@ -83,5 +83,6 @@ Editoren arbeiten grafisch und textuell gleichzeitig.
         <td></td>
     </tr>
 </table>
+
 </body>
 </html>
